// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Twitch Chat: Normalizer - Administration should normalize a Ban 1`] = `
Object {
  "normalizedData": Object {
    "targetId": "targetUserId",
    "userName": "userBanned",
  },
  "timestamp": 1649705365314,
}
`;

exports[`Twitch Chat: Normalizer - Administration should normalize a Message Removal 1`] = `
Object {
  "normalizedData": Object {
    "removedMessage": "removed message",
    "targetId": "targetMessageIdForRemoval",
    "userName": "userMessageRemoved",
  },
  "timestamp": 1649705365314,
}
`;

exports[`Twitch Chat: Normalizer - Administration should normalize a Timeout 1`] = `
Object {
  "normalizedData": Object {
    "duration": 99,
    "targetId": "targetUserId",
    "userName": "userTimedout",
  },
  "timestamp": 1649705365314,
}
`;
